2008-02-13  Neal H. Walfield  <neal@gnu.org>

	* viengoos.c (main): Update comment regarding fault handling for
	additional threads.

2008-02-13  Neal H. Walfield  <neal@gnu.org>

	* activity.h (activity_policy_update): New declaration.
	* activity.c (children_list_insert_after): New function.
	(children_list_detach): Likewise.
	(activity_prepare): Use the above to insert ACTIVITY onto its
	parent's children list.  Keep the list is priority sorted order.
	(activity_deprepare): Likewise, but to remove ACTIVITY from its
	parent's children list.
	(activity_policy_update): New function.
	* server.c (server_loop): Use activity_policy_update to update an
	activity's policy.

2008-02-13  Neal H. Walfield  <neal@gnu.org>

	* pager.c (pager_collect): If CHILD and VICTIM have the same
	weight steal from the activity with the larger number of frames.

2008-02-13  Neal H. Walfield  <neal@gnu.org>

	* server.c (server_loop): Implement activity_stats method.

	* ager.c (ager_loop): Implement first pass at updating available
	memory statistic.

2008-02-11  Neal H. Walfield  <neal@gnu.org>

	* viengoos.c: Don't include <loader.h>.  Include <process-spawn.h>.
	(system_task_load): Just call process_spawn to load the task.

2008-02-11  Neal H. Walfield  <neal@gnu.org>

	* viengoos.c (system_task_load.alloc): Update alloc callback
	function to take additional parameter ro to be consistent with the
	updated API.

2008-02-11  Neal H. Walfield  <neal@gnu.org>

	* viengoos.c (program_name): Change type to char *.
	* viengoos.h (program_name): Likewise.
	* panic.c (program_name): Likewise.
	* t-environment.h (program_name): Likewise.
	(environment_init): Just set program_name to
	argv[0].

2008-02-11  Neal H. Walfield  <neal@gnu.org>

	* thread.c (thread_raise_exception): Improve the debugging output
	for the case where the thread has no exception page.

2008-02-11  Neal H. Walfield  <neal@gnu.org>

	* server.c (server_loop): If sending or receiving fails, don't